[package]
name = "arcade-rs"
version = "0.1.0"
authors = ["Vladislav Rishe <vlados.v10.0@gmail.com>"]
build = "build.rs"

[features]
# No default features enabled
default = []

# Conditional debug compilation
debug = []


[dependencies]
sdl2 = "0.19.0"
sdl2-sys = "0.19.0"
sdl2_image = "0.19.0"
sdl2_mixer = "0.18.0"
sdl2_ttf = "0.19.0"
rand = "0.3.*"