[package]
name = "arcade-rs"
version = "0.1.0"
authors = ["Vladislav Rishe <vlados.v10.0@gmail.com>"]
build = "build.rs"

[features]
# No default features enabled
default = []

# Conditional debug compilation
debug = []


[dependencies]
byteorder = "0.5.3"
crc = "1.3.0"
rand = "0.3.*"
time = "0.1.35"

[dependencies.sdl2]
version = "0.29"
default-features = false
features = ["image","mixer","ttf"]

[dependencies.sdl2-sys]
version = "0.27.*"